...
        
        bindViewModel()
    }
    
    // MARK: - * Initialize --------------------
    private func setupAppearance() {
        navigationItem.rightBarButtonItem = .init(title: "Done", style: .done, target: self, action: #selector(closeButtonTouched))
    }

    private func setupCollectionView() {
        collectionView.backgroundColor = .clear
        collectionView.contentInset = .zero
        collectionView.isPagingEnabled = false
...
